--- a/style.css
+++ b/style.css
@@ -47,66 +47,7 @@
     }
 }
 
-/* 横長 */
-@media (min-aspect-ratio: 1/2) and (orientation: landscape)
-{
-    #editor
-    {
-        grid-template-columns: repeat(32, 1fr);
-        grid-template-rows: repeat(16, 1fr);
-    }
-    #file
-    {
-        grid-column: 1 / 9;
-        grid-row: 1 / 2;
-    }
-    #mode
-    {
-        grid-column: 25 / 33;
-        grid-row: 1 / 2;
-    }
-    #canvas
-    {
-        grid-column: 8 / 24;
-        grid-row: 1 / 17;
-    }
-    #depth-bar
-    {
-        grid-column: 24 / 25;
-        grid-row: 1 / 17;
-    }
-    #depth
-    {
-        height: 2em;
-        line-height: 2em;
-        font-size: 2em;
-    }
-    #scroll-pad
-    {
-        grid-column: 2 / 8;
-        grid-row: 3 / 9;
-    }
-    #rotate-pad
-    {
-        grid-column: 2 / 8;
-        grid-row: 10 / 16;
-    }
-    #scroll,
-    #rotate
-    {
-        font-size: 2em;
-    }
-    #ruler-3d-div,
-    #ruler-2d-div,
-    #vertex-div,
-    #space-div,
-    #texel-div
-    {
-        grid-column: 25 / 33;
-        grid-row: 2 / 17;
-    }
-}
-/* 縦長 */
+/* 縦長画面の場合の各位置 */
 @media (orientation: portrait)
 {
     #editor
@@ -115,40 +56,57 @@
         grid-template-rows: repeat(32, 1fr);
         overflow: hidden;
     }
-    #file
+    #load-div
     {
         grid-column: 1 / 17;
         grid-row: 1 / 3;
     }
-    #canvas
-    {
-        grid-column: 2 / 16;
-        grid-row: 3 / 17;
-    }
-    #mode
+    #save-div
     {
         grid-column: 1 / 17;
-        grid-row: 17 / 19;
+        grid-row: 3 / 5;
+    }
+    #canvas
+    {
+        grid-column: 1 / 17;
+        grid-row: 4 / 20;
+    }
+    #mode-3d
+    {
+        grid-column: 1 / 9;
+        grid-row: 20 / 22;
+    }
+    #mode-2d
+    {
+        grid-column: 9 / 17;
+        grid-row: 20 / 22;
     }
     #scroll-pad
     {
-        grid-column: 4 / 8;
-        grid-row: 19 / 23;
-    }
-    #rotate-pad
-    {
-        grid-column: 10 / 14;
-        grid-row: 19 / 23;
+        grid-column: 1 / 5;
+        grid-row: 23 / 27;
     }
     #depth-bar
     {
-        grid-column: 16 / 17;
-        grid-row: 3 / 17;
+        grid-column: 14 / 16;
+        grid-row: 23 / 27;
     }
-    #depth
+    #time-bar
     {
-        height: 2em;
-        line-height: 2em;
+        grid-column: 2 / 4;
+        grid-row: 28 / 32;
+    }
+    #rotate-pad
+    {
+        grid-column: 13 / 17;
+        grid-row: 28 / 32;
+    }
+    #scroll,
+    #rotate,
+    #depth,
+    #time
+    {
+        font-size: 1em;
     }
     #ruler-3d-div,
     #ruler-2d-div,
@@ -156,14 +114,87 @@
     #space-div,
     #texel-div
     {
-        grid-column: 1 / 17;
-        grid-row: 23 / 33;
+        grid-column: 5 / 13;
+        grid-row: 22 / 33;
+    }
+}
+
+/* 横長画面の場合の各位置 */
+@media (orientation: landscape)
+{
+    #editor
+    {
+        grid-template-columns: repeat(32, 1fr);
+        grid-template-rows: repeat(16, 1fr);
+    }
+    #load-div
+    {
+        grid-column: 1 / 8;
+        grid-row: 1 / 2;
+    }
+    #save-div
+    {
+        grid-column: 1 / 8;
+        grid-row: 2 / 3;
+    }
+    #mode-3d
+    {
+        grid-column: 1 / 8;
+        grid-row: 3 / 4;
+    }
+    #mode-2d
+    {
+        grid-column: 1 / 8;
+        grid-row: 4 / 5;
+    }
+    #canvas
+    {
+        grid-column: 8 / 24;
+        grid-row: 1 / 17;
+    }
+    #scroll-pad
+    {
+        grid-column: 24 / 28;
+        grid-row: 7 / 11;
+    }
+    #depth-bar
+    {
+        grid-column: 29 / 31;
+        grid-row: 7 / 11;
+    }
+    #rotate-pad
+    {
+        grid-column: 28 / 32;
+        grid-row: 12 / 16;
+    }
+    #time-bar
+    {
+        grid-column: 25 / 27;
+        grid-row: 12 / 16;
+    }
+    #scroll,
+    #rotate,
+    #depth,
+    #time
+    {
+        font-size: 2em;
+    }
+    #ruler-3d-div,
+    #ruler-2d-div,
+    #vertex-div,
+    #space-div,
+    #texel-div
+    {
+        grid-column: 1 / 8;
+        grid-row: 5 / 17;
     }
 }
 
 /* 全体のブロック */
 #editor
 {
+    background-color: #888;
+    border-radius: 0.5em;
     position: absolute;
     display: grid;
 }
@@ -189,7 +220,7 @@
 #scroll,
 #rotate
 {
-    background-color: #333;
+    background-color: #444;
     color: #FFF;
     text-align: center;
     padding: calc(25% - 0.5em) 0 0 0;
@@ -200,40 +231,24 @@
     position: relative;
 }
 
-/* 時間バー */
-/*
+/* 深度バーと時間バー */
+#depth-bar,
 #time-bar
-{
-    background-color: #333;
-    border-radius: 0.25em;
-}
-#time
-{
-    width: 100%;
-    height: 2em;
-    background-color: #666;
-    left: 0;
-    text-align: center;
-    line-height: 2em;
-    border-radius: 0.25em;
-    position: relative;
-}
-*/
-
-/* 深度バー */
-#depth-bar
 {
     background-color: #666;
     color: #FFF;
-    border-radius: 0 0.5em 0.5em 0;
+    border-radius: 4em;
 }
-#depth
+#depth,
+#time
 {
     width: 100%;
-    background-color: #333;
+    height: 4em;
+    line-height: 4em;
+    background-color: #444;
     left: 0;
     text-align: center;
-    border-radius: 0.5em;
+    border-radius: 2em;
     position: relative;
 }
 
@@ -258,16 +273,28 @@
 
 
 /* ファイルバー */
-#file
+#load-div,
+#save-div
 {
-    text-align: center;
-    padding-top: 0.5em;
+    padding: 0.5em 0 0 0.5em;
 }
-/* モードバー */
-#mode
+/* ボタンの形 */
+#load-div #new,
+#save-div #export-glb
 {
-    text-align: center;
-    padding-top: 0.5em;
+    border-radius: 0.5em 0 0 0.5em;
+}
+#load-div #load,
+#save-div #export-vrm
+{
+    border-radius: 0 0.5em 0.5em 0;
+}
+
+/* モードバー */
+#mode-3d,
+#mode-2d
+{
+    padding: 0.5em 0 0 0.5em;
 }
 
 /* spanでできたボタン */
@@ -281,15 +308,18 @@
     vertical-align: middle;
     display: inline-block;
 }
-#mode #vertex-3d-mode
+#mode-2d #vertex-2d-mode,
+#mode-3d #vertex-3d-mode
 {
     border-radius: 0.5em 0 0 0.5em;
 }
-#mode  #ruler-2d-mode
+#mode-3d #ruler-3d-mode,
+#mode-2d #ruler-2d-mode
 {
     border-radius: 0 0.5em 0.5em 0;
 }
-#mode .radio-button
+#mode-3d .radio-button,
+#mode-2d .radio-button
 {
     border-radius: 0;
 }
@@ -306,14 +336,15 @@
     display: inline-block;
 }
 
+/* ラジオボタン用のspan */
 .radio-button.selected
 {
-    background-color: #333;
+    background-color: #444;
     color: #FFF;
 }
 .button.selected
 {
-    background-color: #333;
+    background-color: #444;
     color: #FFF;
 }
 
@@ -321,7 +352,7 @@
 input[type="text"],
 input[type="number"]
 {
-    background-color: #CCC;
+    background-color: #EEE;
     color: #000;
     padding: 0 0 0 0.5em;
     border-style: none;
@@ -332,12 +363,12 @@ input[type="number"]
 }
 input[type="text"]
 {
-    width: 12em;
+    width: 10em;
     height: 3em;
 }
 input[type="number"]
 {
-    width: 8em;
+    width: 4em;
     height: 3em;
 }
 
@@ -354,25 +385,37 @@ input[type="submit"]
     height: 3em;
     outline: none;
 }
-input[type="button"]:active,
-input[type="submit"]:active
+input[type="button"]:not([disabled]):active,
+input[type="submit"]:not([disabled]):active
 {
-    background-color: #000;
+    background-color: #444;
     color: #FFF;
-    border-color: #000;
+    border-color: #444;
+}
+input[disabled]
+{
+    background-color: #777;
+    color: #999;
+    border-color: #777;
 }
 
 /* データリスト */
 dt
 {
     line-height: 2em;
+    padding: 0.5em 0 0 0;
+}
+dd
+{
+    line-height: 2em;
+    padding: 0.5em 0 0 0;
 }
 
 /* リンク */
 a
 {
-    color: #900;
-    border-bottom: solid 0.125em #F00;
+    color: #000;
+    border-bottom: solid 0.125em #000;
     padding: 0;
     text-decoration: none;
 }
@@ -391,8 +434,8 @@ a:active
 /* 全体 */
 body
 {
-    background-color: #888;
-    color: #000;
+    background-color: #777;
+    color: #FFF;
     font-size: 12pt;
     overflow: hidden;
 }
@@ -411,10 +454,10 @@ html
     font-family: sans-serif;
     line-height: 1em;
     box-sizing: border-box;
-    touch-action: manipulation;
+    touch-action: none;
     user-select: none;
     overflow-x: hidden;
     overflow-y: auto;
-    scrollbar-color: #FFF #000;
-    scrollbar-width: 1em;
+    scrollbar-color: #AAA #888;
+    scrollbar-width: 0.5em;
 }
