--- a/style.css
+++ b/style.css
@@ -56,12 +56,12 @@
         grid-template-rows: repeat(32, 1fr);
         overflow: hidden;
     }
-    #load-div
+    #save-div
     {
         grid-column: 1 / 17;
         grid-row: 1 / 3;
     }
-    #save-div
+    #export-div
     {
         grid-column: 1 / 17;
         grid-row: 3 / 5;
@@ -127,12 +127,12 @@
         grid-template-columns: repeat(32, 1fr);
         grid-template-rows: repeat(16, 1fr);
     }
-    #load-div
+    #save-div
     {
         grid-column: 1 / 8;
         grid-row: 1 / 2;
     }
-    #save-div
+    #export-div
     {
         grid-column: 1 / 8;
         grid-row: 2 / 3;
@@ -273,21 +273,10 @@
 
 
 /* ファイルバー */
-#load-div,
-#save-div
+#save-div,
+#export-div
 {
     padding: 0.5em 0 0 0.5em;
-}
-/* ボタンの形 */
-#load-div #new,
-#save-div #export-glb
-{
-    border-radius: 0.5em 0 0 0.5em;
-}
-#load-div #load,
-#save-div #export-vrm
-{
-    border-radius: 0 0.5em 0.5em 0;
 }
 
 /* モードバー */
@@ -352,7 +341,7 @@
 input[type="text"],
 input[type="number"]
 {
-    background-color: #EEE;
+    background-color: #CCC;
     color: #000;
     padding: 0 0 0 0.5em;
     border-style: none;
@@ -363,7 +352,7 @@ input[type="number"]
 }
 input[type="text"]
 {
-    width: 9em;
+    width: 15em;
     height: 3em;
 }
 input[type="number"]
