--- a/style.css
+++ b/style.css
@@ -443,6 +443,7 @@ html
     font-family: sans-serif;
     line-height: 1em;
     box-sizing: border-box;
+    -webkit-touch-callout: none;
     touch-action: pan-x pan-y;
     -webkit-user-select: none;
     user-select: none;
