--- a/style.css
+++ b/style.css
@@ -448,8 +448,8 @@ html
     font-family: sans-serif;
     line-height: 1em;
     box-sizing: border-box;
-    -webkit-touch-callout: none;
-    touch-action: pan-x pan-y;
+    /*-webkit-touch-callout: none;*/
+    /*touch-action: pan-x pan-y;*/
     -webkit-user-select: none;
     user-select: none;
     overflow-x: hidden;
