--- a/style.css
+++ b/style.css
@@ -431,11 +431,12 @@ body
 body,
 html
 {
-    -webkit-touch-callout: none;
-    touch-action: pan-x pan-y;
+    /*-webkit-touch-callout: none;
+    touch-action: manipulation;
     -webkit-user-select: none;
-    user-select: none;
+    user-select: none;*/
     overflow: hidden;
+    overscroll-behavior-y: none;
 }
 
 /* 全ての要素 */
@@ -444,16 +445,16 @@ html
     margin: 0;
     padding: 0;
     font-weight: normal;
-    font-size: 1em;
     font-family: sans-serif;
+    font-size: 1em;
     line-height: 1em;
     box-sizing: border-box;
-    /*-webkit-touch-callout: none;*/
-    /*touch-action: pan-x pan-y;*/
-    -webkit-user-select: none;
-    user-select: none;
-    overflow-x: hidden;
-    overflow-y: auto;
     scrollbar-color: #AAA #888;
     scrollbar-width: 0.5em;
+    overflow-x: hidden;
+    overflow-y: auto;
+    /*-webkit-touch-callout: none;
+    touch-action: manipulation;*/
+    -webkit-user-select: none;
+    user-select: none;
 }
