--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
         height: 100svh;
         left: calc(50svw - 100svh);
         top: 0;
-        font-size: calc(100svh / 64);
+        font-size: calc(100svh / 32);
     }
 }
 /* 2/1よりも横長 */
@@ -19,7 +19,7 @@
         height: 50svw;
         left: 0;
         top: calc(50svh - 25svw);
-        font-size: calc(50svw / 64);
+        font-size: calc(50svw / 32);
     }
 }
 /* 1/2よりも縦長 */
@@ -58,55 +58,49 @@
     }
     #save-div
     {
-        grid-column: 1 / 17;
+        grid-column: 1 / 9;
         grid-row: 1 / 3;
     }
-    #export-div
+    #load-div
     {
-        grid-column: 1 / 17;
-        grid-row: 3 / 5;
+        grid-column: 9 / 17;
+        grid-row: 1 / 3;
+        text-align: right;
     }
     #canvas
     {
         grid-column: 1 / 17;
-        grid-row: 5 / 21;
+        grid-row: 3 / 19;
     }
     #mode-3d
     {
         grid-column: 1 / 9;
-        grid-row: 21 / 23;
+        grid-row: 19 / 21;
     }
     #mode-2d
     {
         grid-column: 9 / 17;
-        grid-row: 21 / 23;
+        grid-row: 19 / 21;
     }
     #scroll-pad
     {
-        grid-column: 1 / 5;
-        grid-row: 24 / 28;
+        grid-column: 9 / 13;
+        grid-row: 22 / 26;
     }
     #depth-bar
     {
         grid-column: 14 / 16;
-        grid-row: 24 / 28;
+        grid-row: 22 / 26;
     }
     #time-bar
     {
-        grid-column: 2 / 4;
-        grid-row: 29 / 33;
+        grid-column: 9 / 11;
+        grid-row: 27 / 31;
     }
     #rotate-pad
     {
-        grid-column: 13 / 17;
-        grid-row: 29 / 33;
-    }
-    #scroll,
-    #rotate,
-    #depth,
-    #time
-    {
-        font-size: 1em;
+        grid-column: 12 / 16;
+        grid-row: 27 / 31;
     }
     #ruler-3d-div,
     #ruler-2d-div,
@@ -114,8 +108,8 @@
     #space-div,
     #texel-div
     {
-        grid-column: 5 / 13;
-        grid-row: 23 / 33;
+        grid-column: 1 / 8;
+        grid-row: 21 / 33;
     }
 }
 
@@ -130,22 +124,27 @@
     #save-div
     {
         grid-column: 1 / 8;
-        grid-row: 1 / 2;
+        grid-row: 1 / 3;
     }
-    #export-div
+    #load-div
     {
         grid-column: 1 / 8;
-        grid-row: 2 / 3;
+        grid-row: 3 / 5;
+    }
+    #import-export-div
+    {
+        grid-column: 1 / 8;
+        grid-row: 5 / 7;
     }
     #mode-3d
     {
-        grid-column: 1 / 8;
-        grid-row: 3 / 4;
+        grid-column: 24 / 33;
+        grid-row: 1 / 3;
     }
     #mode-2d
     {
-        grid-column: 1 / 8;
-        grid-row: 4 / 5;
+        grid-column: 24 / 33;
+        grid-row: 3 / 5;
     }
     #canvas
     {
@@ -154,12 +153,12 @@
     }
     #scroll-pad
     {
-        grid-column: 24 / 28;
+        grid-column: 25 / 29;
         grid-row: 7 / 11;
     }
     #depth-bar
     {
-        grid-column: 29 / 31;
+        grid-column: 30 / 32;
         grid-row: 7 / 11;
     }
     #rotate-pad
@@ -171,13 +170,6 @@
     {
         grid-column: 25 / 27;
         grid-row: 12 / 16;
-    }
-    #scroll,
-    #rotate,
-    #depth,
-    #time
-    {
-        font-size: 2em;
     }
     #ruler-3d-div,
     #ruler-2d-div,
@@ -197,6 +189,32 @@
     border-radius: 0.5em;
     position: absolute;
     display: grid;
+}
+
+/* ブロック */
+#save-div,
+#load-div,
+#import-export-div,
+#mode-3d,
+#mode-2d,
+#ruler-3d-div,
+#ruler-2d-div,
+#vertex-div,
+#space-div,
+#texel-div
+{
+    padding: 0.25em;
+}
+
+#mode-3d,
+#mode-2d
+{
+    text-align: center;
+}
+
+#name
+{
+    width: 10em;
 }
 
 /* キャンバス*/
@@ -252,7 +270,7 @@
     position: relative;
 }
 
-/* ファイル関係 */
+/* ボタンの形を変えてくっつける */
 #name
 {
     border-radius: 0.5em 0 0 0.5em;
@@ -262,38 +280,13 @@
     border-radius: 0 0.5em 0.5em 0;
 }
 
-#ruler-3d-div,
-#ruler-2d-div,
-#vertex-div,
-#space-div,
-#texel-div
-{
-    padding: 0.5em;
-}
-
-
-/* ファイルバー */
-#save-div,
-#export-div
-{
-    padding: 0.5em 0 0 0.5em;
-}
-
-/* モードバー */
-#mode-3d,
-#mode-2d
-{
-    padding: 0.5em 0 0 0.5em;
-}
-
 /* spanでできたボタン */
 .radio-button
 {
     background-color: #666;
     color: #FFF;
-    padding: 1em 0.5em 0 0.5em;
+    padding: 1em;
     border-style: none;
-    height: 3em;
     vertical-align: middle;
     display: inline-block;
 }
@@ -313,16 +306,23 @@
     border-radius: 0;
 }
 
+/* spanでできたボタン */
 .button
 {
     background-color: #666;
     color: #FFF;
-    padding: 1em 0.5em 0 0.5em;
+    padding: 1em 0.5em;
     border-style: none;
     border-radius: 0.5em;
-    height: 3em;
     vertical-align: middle;
     display: inline-block;
+}
+
+/* 頂点や面などを作るボタン */
+.new-item
+{
+    text-align: center;
+    display: block;
 }
 
 /* ラジオボタン用のspan */
@@ -337,28 +337,23 @@
     color: #FFF;
 }
 
-/* 値入力欄 */
+/* 入力欄 */
 input[type="text"],
 input[type="number"]
 {
     background-color: #CCC;
     color: #000;
-    padding: 0 0 0 0.5em;
+    padding-left : 0.5em;
     border-style: none;
     border-width: 0;
     border-radius: 0.5em;
     vertical-align: middle;
     outline: none;
-}
-input[type="text"]
-{
-    width: 15em;
     height: 3em;
 }
 input[type="number"]
 {
-    width: 4em;
-    height: 3em;
+    width: 5em;
 }
 
 /* ボタン */
@@ -367,11 +362,11 @@ input[type="submit"]
 {
     background-color: #666;
     color: #FFF;
-    border: solid 0.25em #666;
-    padding: 0 0.5em;
+    border-style: none;
+    border-width: 0;
+    padding: 1em 0.5em;
     border-radius: 0.5em;
     vertical-align: middle;
-    height: 3em;
     outline: none;
 }
 input[type="button"]:not([disabled]):active,
@@ -418,6 +413,18 @@ a:active
 .none
 {
     display: none;
+}
+
+/* タイトル */
+h1
+{
+    line-height: 2em;
+}
+
+/* 段落 */
+p
+{
+    line-height: 2em;
 }
 
 /* 全体 */
