--- a/style.css
+++ b/style.css
@@ -123,32 +123,32 @@
     }
     #save-div
     {
-        grid-column: 1 / 8;
+        grid-column: 1 / 9;
         grid-row: 1 / 3;
     }
     #load-div
     {
-        grid-column: 1 / 8;
+        grid-column: 1 / 9;
         grid-row: 3 / 5;
     }
     #import-export-div
     {
-        grid-column: 1 / 8;
+        grid-column: 1 / 9;
         grid-row: 5 / 7;
     }
     #mode-3d
     {
-        grid-column: 24 / 33;
+        grid-column: 25 / 33;
         grid-row: 1 / 3;
     }
     #mode-2d
     {
-        grid-column: 24 / 33;
+        grid-column: 25 / 33;
         grid-row: 3 / 5;
     }
     #canvas
     {
-        grid-column: 8 / 24;
+        grid-column: 9 / 25;
         grid-row: 1 / 17;
     }
     #scroll-pad
@@ -461,7 +461,7 @@ p
 /* 全体 */
 body
 {
-    background-color: #777;
+    background-color: #AAA;
     color: #FFF;
 }
 
