--- a/style.css
+++ b/style.css
@@ -82,30 +82,38 @@
         grid-column: 9 / 17;
         grid-row: 19 / 21;
     }
+    #mode-param
+    {
+        grid-column: 9 / 17;
+        grid-row: 21 / 23;
+    }
     #scroll-pad
     {
         grid-column: 10 / 14;
-        grid-row: 23 / 27;
+        grid-row: 24 / 28;
     }
     #depth-bar
     {
         grid-column: 14 / 16;
-        grid-row: 23 / 27;
+        grid-row: 24 / 28;
     }
     #time-bar
     {
         grid-column: 10 / 12;
-        grid-row: 27 / 31;
+        grid-row: 28 / 32;
     }
     #rotate-pad
     {
         grid-column: 12 / 16;
-        grid-row: 27 / 31;
+        grid-row: 28 / 32;
     }
-    #ruler-3d-div,
-    #ruler-2d-div,
+    #param-3d-div,
+    #param-2d-div,
     #vertex-div,
-    #space-div,
+    #surface-div,
+    #matrix-div,
+    #animation-3d-div,
+    #animation-2d-div,
     #texel-div
     {
         grid-column: 1 / 9;
@@ -146,6 +154,11 @@
         grid-column: 25 / 33;
         grid-row: 3 / 5;
     }
+    #mode-param
+    {
+        grid-column: 25 / 33;
+        grid-row: 5 / 7;
+    }
     #canvas
     {
         grid-column: 9 / 25;
@@ -171,10 +184,13 @@
         grid-column: 28 / 32;
         grid-row: 12 / 16;
     }
-    #ruler-3d-div,
-    #ruler-2d-div,
+    #param-3d-div,
+    #param-2d-div,
     #vertex-div,
-    #space-div,
+    #surface-div,
+    #matrix-div,
+    #animation-3d-div,
+    #animation-2d-div,
     #texel-div
     {
         grid-column: 1 / 9;
@@ -191,21 +207,6 @@
     display: grid;
 }
 
-/* ブロック */
-#save-div,
-#load-div,
-#import-export-div,
-#mode-3d,
-#mode-2d,
-#ruler-3d-div,
-#ruler-2d-div,
-#vertex-div,
-#space-div,
-#texel-div
-{
-    padding: 0.25em 0.25em 0 0.25em;
-}
-
 /* モード */
 .label
 {
@@ -216,14 +217,38 @@
     vertical-align: middle;
     display: inline-block;
 }
-#ruler-3d-mode,
-#ruler-2d-mode,
+#animation-3d-mode,
 #vertex-3d-mode,
+#surface-mode,
+#matrix-mode
+{
+    width: calc((100% - 2em) / 4);
+}
+#animation-2d-mode,
 #vertex-2d-mode,
-#space-mode,
 #texel-mode
 {
     width: calc((100% - 2em) / 3);
+}
+#param-3d-mode,
+#param-2d-mode
+{
+    width: calc((100% - 2em) / 2);
+}
+
+
+#save-div,
+#load-div,
+#mode-3d,
+#mode-2d,
+#mode-param,
+#param-3d-div,
+#param-2d-div,
+#vertex-div,
+#surface-div,
+#texel-div
+{
+    padding: 0.25em;
 }
 
 /* ファイル関係のボタン */
@@ -240,7 +265,21 @@
 #import,
 #export
 {
-    width: calc((100% - 1em) / 4)
+    width: calc(100% / 4);
+    display: inline-block;
+}
+#load,
+#import
+{
+    border-radius: 0;
+}
+#export
+{
+    border-radius: 0.5em 0 0 0.5em;
+}
+#new
+{
+    border-radius: 0 0.5em 0.5em 0;
 }
 
 /* キャンバス*/
@@ -311,7 +350,7 @@
 {
     background-color: #666;
     color: #FFF;
-    padding: 1.25em 0.5em;
+    padding: 1.25em 0;
     border-style: none;
     text-align: center;
     vertical-align: middle;
@@ -319,12 +358,14 @@
     display: inline-block;
 }
 #mode-2d #vertex-2d-mode,
-#mode-3d #vertex-3d-mode
+#mode-3d #vertex-3d-mode,
+#mode-param #param-3d-mode
 {
     border-radius: 0.5em 0 0 0.5em;
 }
-#mode-3d #ruler-3d-mode,
-#mode-2d #ruler-2d-mode
+#mode-3d #animation-3d-mode,
+#mode-2d #animation-2d-mode,
+#mode-param #param-2d-mode
 {
     border-radius: 0 0.5em 0.5em 0;
 }
@@ -339,8 +380,7 @@
 {
     background-color: #666;
     color: #FFF;
-    padding: 0 0.5em;
-    padding: 1.25em 0.5em;
+    padding: 1.25em 0;
     border-style: none;
     border-radius: 0.5em;
     height: 3.5em;
@@ -394,7 +434,6 @@ input[type="submit"]
     color: #FFF;
     border-style: none;
     border-width: 0;
-    padding: 0 0.5em;
     border-radius: 0.5em;
     height: 3.5em;
     vertical-align: middle;
@@ -489,7 +528,7 @@ html
     font-family: sans-serif;
     font-size: 1em;
     line-height: 1em;
-    word-spacing: 0.015625em;
+    word-spacing: 0.25em;
     box-sizing: border-box;
     scrollbar-color: #AAA #888;
     scrollbar-width: 0.5em;
