--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@
 #scroll-pad,
 #rotate-pad
 {
-    background-color: #666;
+    background-color: #777;
     padding: 0;
     border-style: none;
     border-radius: 100%;
@@ -469,7 +469,7 @@
 #scroll,
 #rotate
 {
-    background-color: #444;
+    background-color: #666;
     color: #FFF;
     text-align: center;
     padding: calc(25% - 0.5em) 0 0 0;
@@ -484,7 +484,7 @@
 #depth-bar,
 #time-bar
 {
-    background-color: #666;
+    background-color: #777;
     color: #FFF;
     border-radius: 4em;
 }
@@ -494,7 +494,7 @@
     width: 100%;
     height: 4em;
     line-height: 4em;
-    background-color: #444;
+    background-color: #666;
     left: 0;
     text-align: center;
     border-radius: 2em;
@@ -512,7 +512,13 @@
     height: 3.5em;
     display: inline-block;
 }
-.radio-button.selected
+
+/* 押されているボタン */
+.radio-button.selected,
+.button.selected,
+.first-button.selected,
+.second-button.selected,
+.third-button.selected
 {
     background-color: #444;
 }
@@ -584,7 +590,6 @@ input[type="number"]
     border-radius: 0.5em;
     height: 3.5em;
     vertical-align: middle;
-    outline: none;
 }
 input[type="text"],
 input[type="number"]
@@ -603,7 +608,6 @@ input[type="submit"]
     border-radius: 0.5em;
     height: 3.5em;
     vertical-align: middle;
-    outline: none;
 }
 input[type="button"]:not([disabled]):active,
 input[type="submit"]:not([disabled]):active
@@ -617,6 +621,24 @@ input[disabled]
     background-color: #777;
     color: #999;
     border-color: #777;
+}
+input[type="color"]
+{
+    padding: 0;
+    border-style: none;
+    border-width: 0;
+    border-radius: 0.5em;
+    height: 3.5em;
+    width: 100%;
+    display: block;
+}
+
+/* 適用ボタン */
+#apply-3d,
+#apply-2d
+{
+    width: 100%;
+    display: block;
 }
 
 /* データリスト */
@@ -667,12 +689,14 @@ body
 {
     background-color: #AAA;
     color: #FFF;
+    font-size: 12pt;
 }
 
 body,
 html
 {
-    -webkit-touch-callout: none;
+    width: 100svw;
+    height: 100svh;
     touch-action: manipulation;
     -webkit-user-select: none;
     user-select: none;
@@ -692,11 +716,11 @@ html
     word-spacing: 0.125em;
     box-sizing: border-box;
     scrollbar-color: #AAA #888;
-    scrollbar-width: 0.5em;
+    scrollbar-width: 0.125em;
     overflow-x: hidden;
     overflow-y: auto;
-    -webkit-touch-callout: none;
     touch-action: manipulation;
     -webkit-user-select: none;
     user-select: none;
+    outline: none;
 }
