--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@
 {
     width: 100%;
     height: 100%;
-    image-rendering: pixelated;
+    /* image-rendering: pixelated; */
 }
 
 /* カレント座標表示 */
@@ -521,6 +521,18 @@
 .third-button.selected
 {
     background-color: #444;
+}
+
+/* 押せないボタン */
+.radio-button.disabled,
+.button.disabled,
+.first-button.disabled,
+.second-button.disabled,
+.third-button.disabled
+{
+    background-color: #777;
+    color: #999;
+    border-color: #777;
 }
 
 /* spanやdivでできたボタン */
@@ -639,6 +651,20 @@ input[type="color"]
 {
     width: 100%;
     display: block;
+}
+
+/* リストの頂点 */
+.vertex
+{
+    background-color: #666;
+    border-style: none;
+    border-width: 0;
+    border-radius: 0.5em;
+    margin-top: 0.25em;
+}
+.vertex.selected
+{
+    background-color: #444;
 }
 
 /* データリスト */
