--- a/style.css
+++ b/style.css
@@ -351,6 +351,7 @@
     border-radius: 0.5em;
     position: absolute;
     display: grid;
+    z-index: 0;
 }
 
 /* モード関係 */
@@ -674,8 +675,9 @@ input[type="color"]
 /* ファイル一覧画面 */
 #strage-div
 {
-    background-color: rgba(136, 136, 136, 0.5);
+    background-color: rgba(136, 136, 136, 0.8);
     padding: 0.25em;
+    z-index: 1;
 }
 #cancel-button
 {
