--- a/style.css
+++ b/style.css
@@ -60,12 +60,12 @@
     }
     #name-div
     {
-        grid-column: 1 / 8;
+        grid-column: 1 / 9;
         grid-row: 1 / 3;
     }
-    #file-div
+    #save-div
     {
-        grid-column: 8 / 15;
+        grid-column: 9 / 15;
         grid-row: 1 / 3;
     }
     #update-div
@@ -131,52 +131,32 @@
     #all
     {
         grid-column: 10 / 12;
-        grid-row: 19 / 21;
+        grid-row: 20 / 22;
     }
     #up
     {
         grid-column: 12 / 14;
-        grid-row: 19 / 21;
+        grid-row: 20 / 22;
     }
     #remove
     {
         grid-column: 14 / 16;
-        grid-row: 19 / 21;
-    }
-    #scroll-pad
-    {
-        grid-column: 10 / 14;
-        grid-row: 21 / 25;
-    }
-    #depth-bar
-    {
-        grid-column: 14 / 16;
-        grid-row: 21 / 25;
-    }
-    #time-bar
-    {
-        grid-column: 10 / 12;
-        grid-row: 25 / 29;
-    }
-    #rotate-pad
-    {
-        grid-column: 12 / 16;
-        grid-row: 25 / 29;
+        grid-row: 20 / 22;
     }
     #grab
     {
         grid-column: 10 / 12;
-        grid-row: 29 / 31;
+        grid-row: 22 / 24;
     }
     #down
     {
         grid-column: 12 / 14;
-        grid-row: 29 / 31;
+        grid-row: 22 / 24;
     }
     #put
     {
         grid-column: 14 / 16;
-        grid-row: 29 / 31;
+        grid-row: 22 / 24;
     }
     #param-3d-div,
     #param-2d-div,
@@ -190,7 +170,8 @@
         grid-column: 1 / 9;
         grid-row: 23 / 33;
     }
-    #strage-div
+    #strage-div,
+    #file-div
     {
         grid-column: 1 / 17;
         grid-row: 1 / 33;
@@ -210,10 +191,10 @@
         grid-column: 1 / 9;
         grid-row: 1 / 3;
     }
-    #file-div
+    #save-div
     {
-        grid-column: 1 / 9;
-        grid-row: 3 / 5;
+        grid-column: 25 / 31;
+        grid-row: 1 / 3;
     }
     #update-div
     {
@@ -223,12 +204,12 @@
     #mode-3d
     {
         grid-column: 1 / 9;
-        grid-row: 5 / 7;
+        grid-row: 3 / 5;
     }
     #mode-2d
     {
         grid-column: 1 / 9;
-        grid-row: 7 / 9;
+        grid-row: 5 / 7;
     }
     #position-x
     {
@@ -278,52 +259,32 @@
     #all
     {
         grid-column: 26 / 28;
-        grid-row: 3 / 5;
+        grid-row: 4 / 6;
     }
     #up
     {
         grid-column: 28 / 30;
-        grid-row: 3 / 5;
+        grid-row: 4 / 6;
     }
     #remove
     {
         grid-column: 30 / 32;
-        grid-row: 3 / 5;
-    }
-    #scroll-pad
-    {
-        grid-column: 26 / 30;
-        grid-row: 5 / 9;
-    }
-    #depth-bar
-    {
-        grid-column: 30 / 32;
-        grid-row: 5 / 9;
-    }
-    #time-bar
-    {
-        grid-column: 26 / 28;
-        grid-row: 9 / 13;
-    }
-    #rotate-pad
-    {
-        grid-column: 28 / 32;
-        grid-row: 9 / 13;
+        grid-row: 4 / 6;
     }
     #grab
     {
         grid-column: 26 / 28;
-        grid-row: 13 / 15;
+        grid-row: 6 / 8;
     }
     #down
     {
         grid-column: 28 / 30;
-        grid-row: 13 / 15;
+        grid-row: 6 / 8;
     }
     #put
     {
         grid-column: 30 / 32;
-        grid-row: 13 / 15;
+        grid-row: 6 / 8;
     }
     #param-3d-div,
     #param-2d-div,
@@ -335,9 +296,10 @@
     #texel-div
     {
         grid-column: 1 / 9;
-        grid-row: 9 / 17;
+        grid-row: 7 / 17;
     }
-    #strage-div
+    #strage-div,
+    #file-div
     {
         grid-column: 1 / 33;
         grid-row: 1 / 17;
@@ -401,7 +363,7 @@
 }
 
 #name-div,
-#file-div,
+#save-div,
 #mode-3d,
 #mode-2d,
 #matrix-div,
@@ -414,31 +376,17 @@
     padding: 0.25em;
 }
 
-/* ファイル関係のボタン */
-#name,
-#name-strage
+/* ストレージとファイル関係のボタン */
+#name
 {
     width: 100%;
     border-radius: 0.5em;
 }
 #open-strage,
-#import,
-#export
+#open-file
 {
-    width: calc(100% / 3);
+    width: calc(100% / 2);
     display: inline-block;
-}
-#open-strage
-{
-    border-radius: 0.5em 0 0 0.5em;
-}
-#export
-{
-    border-radius: 0;
-}
-#import
-{
-    border-radius: 0 0.5em 0.5em 0;
 }
 
 /* アプリ更新ボタン */
@@ -448,10 +396,7 @@
     height: 100%;
     vertical-align: middle;
 }
-#name-strage
-{
-    margin-bottom: 0.25em;
-}
+
 
 /* キャンバス*/
 #canvas
@@ -535,9 +480,7 @@
 /* 押されているボタン */
 .radio-button.selected,
 .button.selected,
-.first-button.selected,
-.second-button.selected,
-.third-button.selected
+.edit-button.selected
 {
     background-color: #444;
 }
@@ -545,9 +488,7 @@
 /* 押せないボタン */
 .radio-button.disabled,
 .button.disabled,
-.first-button.disabled,
-.second-button.disabled,
-.third-button.disabled
+.edit-button.disabled
 {
     background-color: #777 !important;
     color: #999;
@@ -556,9 +497,7 @@
 
 /* spanやdivでできたボタン */
 .button,
-.first-button,
-.second-button,
-.third-button
+.edit-button
 {
     padding: 1.5em 0;
     border-style: none;
@@ -576,31 +515,20 @@
 {
     background-color: #444;
 }
-.first-button,
-.second-button,
-.third-button
+.edit-button
 {
     background-color: #666;
+    border-radius: 0;
 }
-.first-button:active,
-.second-button:active,
-.third-button:active
+.edit-button:active
 {
     background-color: #444;
 }
 /* ボタンの形 */
-.third-button
-{
-    border-radius: 2em 0 0 2em;
-}
-.second-button
-{
-    border-radius: 0;
-}
-.first-button
-{
-    border-radius: 0 2em 2em 0;
-}
+#all { border-radius: 2em 0 0 0; }
+#remove { border-radius: 0 2em 0 0; }
+#grab { border-radius: 0 0 0 2em; }
+#put { border-radius: 0 0 2em 0; }
 
 /* 適用ボタン */
 .apply
@@ -618,17 +546,16 @@ input[type="number"]
     padding-left : 0.5em;
     border-style: none;
     border-width: 0;
-    border-radius: 0.5em;
     height: 3.5em;
     vertical-align: middle;
-}
-input[type="text"],
-input[type="number"]
-{
     width: 100%;
 }
+input[type="number"]
+{
+    border-radius: 0.5em;
+}
 
-/* ボタン */
+/* ボタン類 */
 input[type="button"],
 input[type="submit"]
 {
@@ -672,36 +599,70 @@ input[type="color"]
     display: block;
 }
 
-/* ファイル一覧画面 */
-#strage-div
+/* ストレージ画面 */
+#open-strage
+{
+    border-radius: 0.5em 0 0 0.5em;
+}
+#strage-div,
+#file-div
 {
     background-color: rgba(136, 136, 136, 0.8);
     padding: 0.25em;
     z-index: 1;
 }
-#cancel-button
-{
-    border-radius: 0.5em 0 0 0.5em;
-    width: 25%;
-    display: inline-block;
-}
+#cancel-button,
+#load-button,
+#save-button,
 #delete-button
 {
-    border-radius: 0;
-    width: 25%;
+    width: calc(100% / 16 * 8 / 4);
+    vertical-align: middle;
     display: inline-block;
 }
+#cancel-button,
+#load-button,
 #save-button
 {
     border-radius: 0;
-    width: 25%;
-    display: inline-block;
 }
-#load-button
+#delete-button
 {
     border-radius: 0 0.5em 0.5em 0;
-    width: 25%;
+}
+#name-strage
+{
+    width: calc(100% / 16 * 8);
+    border-radius: 0.5em;
+    vertical-align: middle;
+    border-radius: 0.5em 0 0 0.5em;
+}
+#strage-list
+{
+    margin-top: 2.25em;
+}
+
+/* ファイル系ボタン */
+#open-file
+{
+    border-radius: 0 0.5em 0.5em 0;
+}
+#name-file
+{
+    width: 100%;
+    border-radius: 0.5em 0.5em 0 0;
+}
+#cancel-file,
+#export,
+#import
+{
+    width: 100%;
     display: inline-block;
+    border-radius: 0;
+}
+#export
+{
+    border-radius: 0 0 0.5em 0.5em;
 }
 
 /* リストの頂点と面 */
@@ -713,8 +674,9 @@ input[type="color"]
     border-style: none;
     border-width: 0;
     border-radius: 0.5em;
-    padding: 0.5em;
+    padding: 1em;
     margin-top: 0.25em;
+    text-decoration: none;
 }
 .strage.selected,
 .vertex.selected,
