--- a/style.css
+++ b/style.css
@@ -390,11 +390,15 @@
 }
 
 /* アプリ更新ボタン */
-#update
+#update-div
 {
+    color: #333;
+    background-image: url(./icon.png);
+    background-size: contain;
     width: 100%;
     height: 100%;
-    vertical-align: middle;
+    padding: 2.5em 0 0 0;
+    text-align: center;
 }
 
 
@@ -588,7 +592,11 @@ input[type="color"]
     border-radius: 0.5em;
     height: 3.5em;
     width: 100%;
-    display: block;
+}
+#button-vertex-color,
+#button-texel-color
+{
+    width: 100%;
 }
 
 /* 適用ボタン */
