--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
         grid-column: 9 / 15;
         grid-row: 1 / 3;
     }
-    #update-div
+    #version
     {
         grid-column: 15 / 17;
         grid-row: 1 / 3;
@@ -196,7 +196,7 @@
         grid-column: 25 / 31;
         grid-row: 1 / 3;
     }
-    #update-div
+    #version
     {
         grid-column: 31 / 33;
         grid-row: 1 / 3;
@@ -390,14 +390,14 @@
 }
 
 /* アプリ更新ボタン */
-#update-div
+#version
 {
     color: #333;
     background-image: url(./icon.png);
     background-size: contain;
     width: 100%;
     height: 100%;
-    padding: 2.5em 0 0 0;
+    padding: 2.75em 0 0 0;
     text-align: center;
 }
 
@@ -593,10 +593,15 @@ input[type="color"]
     height: 3.5em;
     width: 100%;
 }
-#button-vertex-color,
-#button-texel-color
+
+/* 入力のラベル */
+label
 {
+    border-radius: 0.5em;
+    padding: 1.25em 0;
+    text-align: center;
     width: 100%;
+    display: block;
 }
 
 /* 適用ボタン */
